--- a/ex10/src/index.html
+++ b/ex10/src/index.html
@@ -8,12 +8,12 @@
 <nav id="navbar">
    <header id="header"><h3>Eloquent JavaScript</h3></header>
    <ul>
-       <li style="border-top: 2px solid gray;" class="nav-links" id="#introduction"><a href="#introduction">Introduction</a></li>
-       <li class="nav-links" id="#values_types_and_operators"><a href="#values_types_and_operators">Values, Types, and Operators</a></li>
+       <li class="nav-links" id="introduction" style="border-top: 2px solid gray;"><a href="#introduction">Introduction</a></li>
+       <li class="nav-links" id="values_types_and_operators"><a href="#values_types_and_operators">Values, Types, and Operators</a></li>
        <li class="nav-links" id="#program_structure"><a href="#program_structure">Program Structure</a></li>
-       <li class="nav-links" id="#functions"><a href="#functions">Functions</a></li>
-       <li class="nav-links" id="#objects_and_arrays"><a href="#objects_and_arrays">Data Structures: Objects and Arrays</a></li>
-       <li class="nav-links" id="#higher_order_functions"><a href="#higher_order_functions">Higher-order Functions</a></li>
+       <li class="nav-links" id="functions"><a href="#functions">Functions</a></li>
+       <li class="nav-links" id="objects_and_arrays"><a href="#objects_and_arrays">Data Structures: Objects and Arrays</a></li>
+       <li class="nav-links" id="higher_order_functions"><a href="#higher_order_functions">Higher-order Functions</a></li>
        <li style="padding: 0px;"><img id="header-img" src="https://eloquentjavascript.net/img/cover.jpg" alt="Eloquent JavaScript"></li>
    </ul>
 </nav>
