--- a/ex10/src/index.html
+++ b/ex10/src/index.html
@@ -33,15 +33,15 @@
                 <p>In the beginning, at the birth of computing, there were no programming languages. Programs looked something like this:</p>
                 <div class="code">
                     <code>
-                        00110001 00000000 00000000<br/>
-                        00110001 00000001 00000001<br/>
-                        00110011 00000001 00000010<br/>
-                        01010001 00001011 00000010<br/>
-                        00100010 00000010 00001000<br/>
-                        01000011 00000001 00000000<br/>
-                        01000001 00000001 00000001<br/>
-                        00010000 00000010 00000000<br/>
-                        01100010 00000000 00000000
+            00110001 00000000 00000000
+            00110001 00000001 00000001
+            00110011 00000001 00000010
+            01010001 00001011 00000010
+            00100010 00000010 00001000
+            01000011 00000001 00000000
+            01000001 00000001 00000001
+            00010000 00000010 00000000
+            01100010 00000000 00000000
                     </code>
                 </div>
             </li>
@@ -53,8 +53,8 @@
             <p>Inside the computer’s world, there is only data. You can read data, modify data, create new data—but that which isn’t data cannot be mentioned. All this data is stored as long sequences of bits and is thus fundamentally alike.</p>
             <div class="code">
                 <code>
-                  0   0   0   0   1   1   0   1<br/>
-                128  64  32  16   8   4   2   1
+              0   0   0   0   1   1   0   1
+            128  64  32  16   8   4   2   1
                 </code>
             </div>
         </article>
@@ -81,12 +81,12 @@
                     <p>A function definition is a regular binding where the value of the binding is a function. For example, this code defines square to refer to a function that produces the square of a given number:</p>
                     <div class="code">
                         <code>
-                            const square = function(x) {<br/>
-                            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;return x * x;<br/>
-                            &nbsp;&nbsp;};<br/>
-                              <br/>
-                            &nbsp;&nbsp;console.log(square(12));<br/>
-                            &nbsp;&nbsp;// → 144
+            const square = function(x) {
+                    return x * x;
+                };
+                
+                console.log(square(12));
+                // → 144
                         </code>
                     </div>
                 </li>
